--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,11 @@
   "scripts": {
     "dev": "nodemon src/server.js",
     "start": "node src/server.js",
-    "test": "cross-env NODE_OPTIONS=--experimental-vm-modules jest --runInBand"
+    "test:detect": "cross-env NODE_OPTIONS=--experimental-vm-modules jest --runInBand --detectOpenHandles"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "transform": {}
   },
   "devDependencies": {
     "@jest/globals": "^30.2.0",
@@ -12,7 +16,8 @@
     "jest": "^30.2.0",
     "mongodb-memory-server": "^10.4.1",
     "natural": "^8.1.0",
-    "openai": "^6.10.0"
+    "openai": "^6.10.0",
+    "supertest": "^7.1.4"
   },
   "type": "module",
   "main": "server.js",
@@ -24,6 +29,7 @@
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "express-validator": "^7.3.1",
+    "ioredis": "^5.8.2",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.0.1",
     "multer": "^2.0.2",
