--- a/backend/package.json
+++ b/backend/package.json
@@ -35,6 +35,7 @@
     "multer": "^2.0.2",
     "nodemon": "^3.1.11",
     "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "streamifier": "^0.1.1"
   }
 }
